syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "SocialNetwork.Dialog.Grpc.V3";

package dialog.v3;

service GrpcDialogService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc GetMessageById(GetMessageByIdRequest) returns (GetMessageByIdResponse);
  rpc MarkMessageAsRead(MarkMessageAsReadRequest) returns (MarkMessageAsReadResponse);
}

message SendMessageRequest {
  int64 senderId = 1;
  int64 recipientId = 2;
  string text = 3;
}

message SendMessageResponse {
  bool success = 1;
}

message GetMessagesRequest {
  int64 userId1 = 1;
  int64 userId2 = 2;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message GetMessageByIdRequest {
  int64 messageId = 1;
}

message GetMessageByIdResponse {
  Message message = 1;
}

message Message {
  int64 messageId = 1;
  int64 from = 2;
  int64 to = 3;
  string text = 4;
  google.protobuf.Timestamp sentAt = 5;
  bool isRead = 6;
}

message MarkMessageAsReadRequest {
  int64 messageId = 1;
  bool isRead = 2;
}

message MarkMessageAsReadResponse {
  bool success = 1;
}